--- a/CSS/home.css
+++ b/CSS/home.css
@@ -20,7 +20,7 @@ body{
     color: orange;
 }
 header{
-    background-image: url(../IMAGES/coverimage5.jpg);
+    background-image: url(../IMAGES/wallpaper.jpg);
     height: 100vh;
     background-size: cover;
 }
@@ -64,13 +64,13 @@ div.pictures-jumbotron{
     padding: 6em 2em;
     /* background-image: url(../IMAGES/background.jpg);
     background-size: cover; */
-    background-color: orange;
+    background-color: black;
 }
 img.members-pictures{
     width: 350px;
     height: 270px;
     border-radius: 100px;
-    border: 10px solid black;
+    border: 10px solid red;
 }
 .member1{
     text-align: center;
@@ -91,6 +91,7 @@ a.story-button{
     padding: 0.5em 2em;
     font-size: 20px;
     border-radius: 20px;
+    color: red;
 }
 a.story-button:hover{
     opacity: 0.8;
@@ -103,7 +104,7 @@ a.story-button:hover{
 }
 .footer-jumbotron{
     text-align: center;
-    padding: 6em 2em;
+    padding: 5em 2em;
     background-color: black;
 }
 .footer-jumbotron h3{
