--- a/CSS/home.css
+++ b/CSS/home.css
@@ -118,3 +118,9 @@ a.story-button:hover{
     font-size: 20px;
     font-style: italic;
 }
+
+@media(max-width: 574px){
+    .began{
+        margin-top: -60px;
+    }
+}
