--- a/CSS/home.css
+++ b/CSS/home.css
@@ -20,14 +20,14 @@ body{
     color: orange;
 }
 header{
-    background-image: url(../IMAGES/wallpaper.jpg);
+    background-image: linear-gradient(to right, rgba(0,0,0, 0), rgba(0,0,0,1)), url(../IMAGES/wallpaper.jpg);
     height: 100vh;
     background-size: cover;
 }
 div.intro-jumbotron{
-    padding: 1em 2em;
-    color: red;
-    font-weight: bold;
+    padding: 12em 2em;
+    color: wheat;
+    font-weight: bolder;
 }
 div.journey-begin-jumbotron{
     min-height: 600px;
