--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -5,4 +5,28 @@
 body{
     font-family: 'Playfair Display', serif;
 }
-
+.navbar{
+    background-color: white;
+    padding: 0 7em;
+} 
+.navbar-logo{
+    width: 100px;
+    height: 80px;
+}
+.navbar ul.dropdown-menu{
+    line-height: 35px;
+}
+header{
+    background-color: black;
+    height: 100vh;
+}
+.text{
+    color: wheat;
+    padding: 8em 0;
+}
+.Debbie-pic{
+    border: 10px solid red;
+    border-radius: 50px;
+    padding: 1em 1em;
+    margin-top: 10px;
+}
