--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -29,4 +29,13 @@ header{
     border-radius: 50px;
     padding: 1em 1em;
     margin-top: 10px;
+    height: 450px;
+}
+div.body-jumbotron{
+    background-color: rgb(24,17,47);
+    color: white;
+}
+.background{
+    background-color: white;
+    color: black;
 }
