--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,6 +27,7 @@ section {
 
 .section1 {
     background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/pexels-pixabay-158736.jpg);
+    height: 100vh;
 }
 
 .section2 {
