--- a/CSS/index.css
+++ b/CSS/index.css
@@ -413,8 +413,8 @@ img.images-ALU{
         border-radius: 0.5rem;
         width: 80%;
     }
-    .began{
-        margin-top: -60px;
+    .image-row{
+        margin-top: 100px;
     }
 }
 
