--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -1,17 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500&display=swap");
 *{
     margin: 0;
     padding: 0;
 }
 body{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Poppins', serif;
+    background-color: black;
 }
 .navbar{
     background-color: white;
     padding: 0 7em;
 } 
-.navbar-logo{
-    width: 100px;
-    height: 80px;
+.logo {
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+    height: 3em;
+    width: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
 }
 .navbar ul.dropdown-menu{
     line-height: 35px;
