--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     font-family: 'Poppins', serif;
@@ -9,7 +10,7 @@ body{
 }
 .navbar{
     background-color: white;
-    padding: 0 7em;
+    padding: 0 5em; 
 } 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
@@ -19,8 +20,5 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-}
-.navbar ul.dropdown-menu{
-    line-height: 35px;
 }
 
