--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -21,4 +21,34 @@ body{
     justify-content: center;
     border-radius: 50%;
 }
-
+.storycards{
+    background-color: orange;
+}
+.storycards p{
+    color: black;
+}
+.storycards a{
+    text-decoration: none;
+}
+.storycards a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: white;
+    margin:0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: red;
+    transition: all 0.2s ease;
+}
+.ALU-logo{
+    width: 325px;
+    height: 100px;
+}
+.storycards h3{
+    color: white;
+    text-align: center;
+    font-style: italic;
+    font-weight: 800;
+}
