--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -6,6 +6,7 @@
 }
 body{
     font-family: 'Poppins', serif;
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/pexels-pixabay-158736.jpg);
 }
 .navbar{
     background-color: white;
