--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -6,7 +6,11 @@
 }
 body{
     font-family: 'Poppins', serif;
-    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/pexels-pixabay-158736.jpg);
+    background-image: url(../IMAGES/john-towner-JgOeRuGD_Y4-unsplash.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    color: white;
 }
 .navbar{
     background-color: white;
@@ -24,13 +28,47 @@ body{
 
 
 
-.storycards{
-    background-color: orange;
+.card{
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+   
+    border-radius: 1rem;
+    border: 1px solid transparent;
+
+    backdrop-filter: blur(1rem);
+    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
+
+    border-top-color: rgba(225,225,225,0.5);
+    border-left-color: rgba(225,225,225,0.5);
+    border-bottom-color: rgba(225,225,225,0.1);
+    border-right-color: rgba(225,225,225,0.1);
 }
-.storycards p{
+.card p{
+    font-weight: 500;
+}
+.cb1{
+    background-color: rgba(225,225,225,0.1);
+}
+.cb2{
+    background-color: rgba(225,225,225,0.3);
     color: black;
 }
-.cards a{
+.card-number{
+    color: rgba(225,225,225,0.08);
+    font-size: 5rem;
+    z-index: -1;
+    position: relative;
+    top: -1;
+    left: 4rem;
+}
+.card-title{
+    color: orange;
+    font-weight: 800;
+    font-size: 2rem;
+    text-decoration: underline;
+}
+/* .cards a{
     text-decoration: none;
 }
 .cards a{
@@ -45,13 +83,9 @@ body{
     color: red;
     transition: all 0.2s ease;
 }
+*/
 .ALU-logo{
-    width: 325px;
+    width: 320px;
     height: 100px;
 }
-.storycards h3{
-    color: white;
-    text-align: center;
-    font-style: italic;
-    font-weight: 800;
-}
+
