--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -139,7 +139,7 @@ div.comment-jumbotron h3{
 .Notes{
     color: wheat;
 }
-span{
+.place{
     color: pink;
     font-style: italic;
     font-size: 20px;
