--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -59,63 +59,51 @@ div.comment-jumbotron h3{
     font-size: 2.5rem;
 }
 
-
-/*Footer*/
-.footer-jumbotron{
+.card{
+    width: 100%;
+    max-width: 400px;
     text-align: center;
-    padding: 5em 2em;
+   
+    border-radius: 1rem;
+    border: 1px solid transparent;
+
+    backdrop-filter: blur(1rem);
+    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
+
+    border-top-color: rgba(225,225,225,0.5);
+    border-left-color: rgba(225,225,225,0.5);
+    border-bottom-color: rgba(225,225,225,0.1);
+    border-right-color: rgba(225,225,225,0.1);
 }
-.footer-jumbotron h3{
-    color: red;
-    font-weight: 600;
-    font-size: 30px;
+.card h3{
+    color: wheat;
 }
-.footer-jumbotron p{
-    color: white;
-    font-weight: 600;
-    font-size: 20px;
-    font-style: italic;
+.card p{
+    font-weight: 500;
 }
-@media screen and (max-width: 600px){
-    nav {
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        padding: 3rem 0rem;    
-    }
-    .logo {
-        height: 4rem;
-        width: 4rem;
-        display: flex;
-        margin-left: 1rem;
-    }
-    
-    h2 {
-        font-size: 1rem;
-    }
-    
-    .buttons {
-        display: flex;
-        align-items: center;
-        justify-content: end;
-        margin-right: 1rem;
-      
-    }
-    
-    button {
-        width: 3.5rem;
-        font-size: 0.8rem;
-    }
-    
-    .contact-form {
-        width: 90%;
-    }
-    
-    input {
-        border-radius: 0.5rem;
-        width: 80%;
-    }
-    .image-row{
-        margin-top: 100px;
-    }
+.cb1{
+    background-color: rgba(225,225,225,0.1);
 }
+.cb2{
+    background-color: rgba(225,225,225,0.3);
+}
+.card-number{
+    color: rgba(225,225,225,0.08);
+    font-size: 5rem;
+    z-index: -1;
+    position: relative;
+    top: -1;
+    left: 4rem;
+}
+.card-title{
+    color: orange;
+    font-weight: 800;
+    font-size: 2rem;
+    text-decoration: underline;
+}
+.ALU-logo{
+    width: 320px;
+    height: 100px;
+}
+
+
