--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,23 +31,26 @@ section {
 .section2 {
     position: relative;
     height: 140vh;
-    border-top: rgb(101, 97, 97) solid 1px;
-    padding-top: 5rem;
+    /* border-top: rgb(101, 97, 97) solid 1px;
+    padding-top: 5rem; */
+    background-image: url(../IMAGES/pexels-vlad-alexandru-popa-1480962.jpg);
 }
 
 .section3 {
     background-color: black;
-    border-top: rgb(101, 97, 97) solid 1px;
+    /* border-top: rgb(101, 97, 97) solid 1px; */
     padding-top: 5rem;
 }
 .section4 {
     /* height: 120vh; */
-    border-top: rgb(101, 97, 97) solid 1px;
-    padding-top: 5rem;
+    /* border-top: rgb(101, 97, 97) solid 1px; */
+    /* padding-top: 5rem; */
+    background-color: rgb(24,17,47);
 
 }
 .navbar{
     padding: 0 15em;
+    background-color: white;
 } 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
@@ -58,14 +61,14 @@ section {
     justify-content: center;
     border-radius: 50%;
     color: black;
-    font-size: 15px;
+    font-size: 20px;
 }
 .pic-text h2 {
     color: white;
     line-height: 50px;
 }
 .pic-home-page {
-    width: 30rem;
+    width: 20rem;
     height: 30rem;
     border-radius: 50%;
     background-color: #FFB800;
@@ -81,7 +84,7 @@ section {
 .pic-text {
     display: flex;
     width: 80%;
-    margin: auto;
+    margin-top: 50px;
 }
 
 .text-home-page {
@@ -89,7 +92,7 @@ section {
     display: flex;
     align-items: flex-end;
     font-stretch: extra-expanded;
-    animation: slideUp 1s ease-in 0s;
+    padding: 5em 0;
 }
 .text-home-page h2{
     font-size: 3rem;
@@ -107,6 +110,7 @@ span {
 
 div.journey-begin-jumbotron{
     min-height: 700px;
+    background-color: rgb(24,17,47);
 }
 div.journey-begin-jumbotron{
     color: white;
@@ -147,7 +151,7 @@ img.images-ALU{
     justify-content: center;
     align-items: center;
     font-size: 3rem;
-    margin-bottom: 30px;
+    margin-top: 50px;
 }
 
 .heading1 {
@@ -167,7 +171,7 @@ img.images-ALU{
 
 .polygon {
     position: absolute;
-    top: 10rem;
+    top: 8rem;
     width: 100%;
     min-height: 100vh;
     perspective: 1000rem;
@@ -192,8 +196,8 @@ img.images-ALU{
 
 .polygon .slide .hexagon {
     clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
-    height: 25rem;
-    width: 25%;
+    height: 30rem;
+    width: 30%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
