--- a/CSS/index.css
+++ b/CSS/index.css
@@ -85,6 +85,7 @@ section {
     display: flex;
     width: 80%;
     margin-top: 50px;
+    margin-left: 50px;
 }
 
 .text-home-page {
@@ -316,6 +317,21 @@ img.images-ALU{
     font-size: 15px;
 }
 @media screen and (max-width: 600px){
+    .section1{
+        height: 170vh;
+    }
+    .pic-text h2{
+        margin-right: 50px;
+    }
+    .picture-ALU{
+        width: 400px;
+        margin-left: 20px;
+        margin-bottom: 20px;
+    }
+    .images-ALU{
+        width: 200px;
+        right:-0.2px;
+    }
     nav {
         width: 100%;
         justify-content: space-between;
