--- a/CSS/author.css
+++ b/CSS/author.css
@@ -6,7 +6,7 @@
     font-family: 'Poppins', serif;
 }
 .navbar{
-    background-color: white;
+    /* background-color: white; */
     padding: 0 5em; 
 } 
 .logo {
@@ -19,8 +19,147 @@
     border-radius: 50%;
     font-size: 20px;
 }
-body{
-    background-image: url(../IMAGES/coverimage6.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+.navbar-nav a {
+	font-size: 15px;
+	font-weight: 700;
+	text-shadow: white;
+    color: white;
 }
+.navbar-light .navbar-nav .nav-link {
+	color: #fff;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+	color: orange;
+}
+.navbar-toggler {
+	padding: 1px 5px;
+	font-size: 18px;
+	line-height: 0.3;
+    color: orange;
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+}
+.navbar .dropdown-menu .dropdown-item{
+    color: black
+}
+.navbar .dropdown-menu .dropdown-item:hover{
+    color: red;
+}
+/*  carousel      */
+
+.carousel-item {
+	height: 100vh;
+	min-height: 400px;
+}
+.bg-1 {
+	background-image: url(../IMAGES/DEE.jpg);
+}
+.bg-2 {
+	background-image: url(../IMAGES/JOSSY.jpeg);
+}
+.bg-3 {
+	background-image: url(../IMAGES/Justus.jpg);
+}
+.bg-4 {
+	background-image: url(../IMAGES/Manga.jpeg);
+}
+.bg-5 {
+	background-image: url(../IMAGES/Kein.jpg);
+}
+.bg-1, .bg-2, .bg-3, .bg-4, .bg-5{
+	-webkit-background-size: cover;
+	background-size: cover;
+    background-repeat: no-repeat;
+    background-position: unset;
+}
+.carousel-caption {
+	bottom: 200px;
+	z-index: 2;
+}
+.carousel-caption h5 {
+	font-size: 50px;
+	text-transform: capitalize;
+	letter-spacing: 2px;
+	margin-top: 25px;
+	font-family: 'Moon Dance', cursive;
+}
+.slide span{
+    color: orange;
+}
+.carousel-caption p {
+	width: 60%;
+	margin: auto;
+	font-size: 18px;
+	line-height: 1.9;
+}
+.carousel-caption a {
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: 5px 20px;
+	display: inline-block;
+	color: #fff;
+	margin-top: 15px;
+	border-radius: 5px;
+    font-weight: bolder;
+}
+.carousel-inner:before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.6);
+	z-index: 1;
+}
+.carousel-indicators {
+	bottom: 65px;
+}
+.carousel-indicators button {
+	width: 100px !important;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.carousel-caption {
+		bottom: 350px;
+	}
+	.carousel-caption h5 {
+		font-size: 65px;
+	}
+	.carousel-caption p {
+		font-size: 18px;
+		width: 100%;
+	}
+} 
+@media only screen and (max-width: 767px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.carousel-caption {
+		bottom: 165px;
+	}
+	.carousel-caption h5 {
+		font-size: 25px;
+	}
+	.carousel-caption p {
+		font-size: 12px;
+		width: 100%;
+	}
+	.carousel-caption a {
+		padding: 10px 15px;
+		font-size: 15px;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+} 
