--- a/CSS/index.css
+++ b/CSS/index.css
@@ -50,7 +50,6 @@ section {
 }
 .navbar{
     padding: 0 15em;
-    background-color: white;
 } 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
@@ -63,6 +62,32 @@ section {
     color: black;
     font-size: 20px;
 }
+.navbar-nav a {
+	font-size: 15px;
+	font-weight: 700;
+	text-shadow: white;
+    color: white;
+}
+.navbar-light .navbar-nav .nav-link {
+	color: #fff;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+	color: orange;
+}
+.navbar-toggler {
+	padding: 1px 5px;
+	font-size: 18px;
+	line-height: 0.3;
+    color: orange;
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+}
+.navbar .dropdown-menu .dropdown-item{
+    color: black
+}
+.navbar .dropdown-menu .dropdown-item:hover{
+    color: red;
+}
+
 .pic-text h2 {
     color: white;
     line-height: 50px;
@@ -430,6 +455,15 @@ img.images-ALU{
     .image-row{
         margin-top: 100px;
     }
+    .navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
 }
 
 
