--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -13,7 +13,6 @@ body{
     color: white;
 }
 .navbar{
-    background-color: white;
     padding: 0 5em; 
 } 
 .logo {
@@ -26,10 +25,36 @@ body{
     border-radius: 50%;
     font-size: 20px;
 }
+.navbar-nav a {
+	font-size: 15px;
+	font-weight: 700;
+	text-shadow: white;
+    color: white;
+}
+.navbar-light .navbar-nav .nav-link {
+	color: #fff;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+	color: orange;
+}
+.navbar-toggler {
+	padding: 1px 5px;
+	font-size: 18px;
+	line-height: 0.3;
+    color: orange;
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+}
+.navbar .dropdown-menu .dropdown-item{
+    color: black
+}
+.navbar .dropdown-menu .dropdown-item:hover{
+    color: red;
+}
 
 
 
 .card{
+    margin-top: 70px;
     width: 100%;
     max-width: 400px;
     text-align: center;
@@ -164,8 +189,28 @@ div.comment-jumbotron h3{
     font-size: 15px;
 }
 
-@media screen and (max-width: 600px) {
-    .card{
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+} 
+@media only screen and (max-width: 767px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.card{
         margin-left: 30px;
     }
-}
+	.navbar-collapse {
+		background: red;
+	}
+} 
