--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -52,9 +52,10 @@ body{
 }
 
 
-
+.cards{
+    margin-top: 100px;
+}
 .card{
-    margin-top: 70px;
     width: 100%;
     max-width: 400px;
     text-align: center;
