--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -51,8 +51,10 @@ body{
     color: red;
 }
 
+.cards{
+    margin-top: 100px;
+}
 .card{
-    margin-top: 70px;
     width: 100%;
     max-width: 400px;
     text-align: center;
@@ -63,10 +65,10 @@ body{
     backdrop-filter: blur(1rem);
     box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
 
-    /* border-top-color: rgba(225, 225, 225, 0.5);
-    border-left-color: rgba(225,225,225,0.5);
+    border-top-color: rgba(225, 225, 225, 0.2);
+    border-left-color: rgba(225,225,225,0.2);
     border-bottom-color: rgba(225,225,225,0.1);
-    border-right-color: rgba(225,225,225,0.1); */
+    border-right-color: rgba(225,225,225,0.1); 
 }
 .card h3{
     color: wheat;
@@ -79,11 +81,13 @@ body{
     color: white;
     border-radius: 20px;
 }
-.cb2{
-    background-color: rgba(225,225,225,0.3);
+.card.no2{
+    background-color: rgba(225,225,225,0.2);
+    color: white;
+    border-radius: 20px;
 }
 .card-number{
-    color: rgba(225,225,225,0.10);
+    color: rgba(225,225,225,0.05);
     font-size: 5rem;
     z-index: -1;
     position: relative;
@@ -111,6 +115,11 @@ body{
     color: orangered;
     transition: all 0.2s ease;
 }
+.ALU-logo{
+    width: 320px;
+    height: 100px;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.navbar-nav {
 		text-align: center;
