--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -14,6 +14,7 @@ body{
 }
 .navbar{
     padding: 0 15em;
+    background-color: #000;
 } 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
