--- a/CSS/index.css
+++ b/CSS/index.css
@@ -50,7 +50,7 @@ section {
 }
 .navbar{
     padding: 0 15em;
-    background-image: linear-gradient(to right, white, black);
+    /* background-color: rgba(225,225,225,0.1); */
 } 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
