--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,13 +6,19 @@
     font-family: 'Poppins', serif;
 }
 
-main {
+body{
     background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/pexels-pixabay-158736.jpg);
-    width: 100%;
-    position: relative;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+
+main {
+    width: 100%;
+    position: relative;
+    
 }
 
 
@@ -24,7 +30,7 @@ section {
 }
 
 .section1 {
-    height: 120vh;
+    height: 110vh;
 }
 
 .section2 {
@@ -46,7 +52,8 @@ section {
 
 }
 .navbar{
-    padding: 0 15em;
+    color: white;
+    padding: 2rem 5rem 3rem 5rem; 
 } 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
@@ -101,6 +108,9 @@ section {
 
 span {
     color: #E23219;
+}
+span:hover {
+    color:#FFB800;
 }
 
 div.journey-begin-jumbotron{
@@ -168,6 +178,7 @@ img.images-ALU{
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    padding-top: 10rem;
 }
 
 .polygon .slide {
