--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -6,16 +6,16 @@
 }
 body{
     font-family: 'Poppins', serif;
-    background-image: url(../IMAGES/john-towner-JgOeRuGD_Y4-unsplash.jpg);
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/john-towner-JgOeRuGD_Y4-unsplash.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
     color: white;
 }
 .navbar{
-    background-color: white;
-    padding: 0 5em; 
-} 
+    color: white;
+    padding: 1rem 5rem 3rem 5rem; 
+}
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
     height: 3em;
@@ -25,68 +25,53 @@ body{
     justify-content: center;
     border-radius: 50%;
 }
-
-
-
-.card{
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-   
-    border-radius: 1rem;
-    border: 1px solid transparent;
-
-    backdrop-filter: blur(1rem);
-    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
-
-    border-top-color: rgba(225,225,225,0.5);
-    border-left-color: rgba(225,225,225,0.5);
-    border-bottom-color: rgba(225,225,225,0.1);
-    border-right-color: rgba(225,225,225,0.1);
+.testimonial-grid{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1rem;
 }
-.card h3{
+
+.grid-col-2{
+    grid-column: span 2;
+}
+.grid-col-3{
+    grid-column: span 3;
+}
+.grid-row-2{
+    grid-row: span 2;
+}
+.testimonial {
+    text-align: left;
+    border-radius: 1rem;
+    backdrop-filter: blur(1rem);
+    background-color: rgba(225,225,225,0.1);
+    padding: 2rem;
+}
+.testimonial h3{
     color: wheat;
 }
-.card p{
-    font-weight: 500;
+.testimonial p{
+    font-weight: 300;
+    line-height: 2rem;
+    text-align: justify;
 }
-.cb1{
-    background-color: rgba(225,225,225,0.1);
-}
-.cb2{
-    background-color: rgba(225,225,225,0.3);
-    color: black;
-}
+
 .card-number{
     color: rgba(225,225,225,0.08);
     font-size: 5rem;
-    z-index: -1;
-    position: relative;
-    top: -1;
-    left: 4rem;
 }
 .card-title{
     color: orange;
-    font-weight: 800;
-    font-size: 2rem;
-    text-decoration: underline;
-}
-/* .cards a{
-    text-decoration: none;
-}
-.cards a{
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: black;
-    margin:0 10px 10px 0;
+    font-weight: 500;
+    font-size: 1.2rem;
     text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: red;
-    transition: all 0.2s ease;
+    padding-bottom: 2rem;
 }
-*/
+h6{
+    font-size: small;
+}
+
 .ALU-logo{
     width: 320px;
     height: 100px;
@@ -144,3 +129,48 @@ div.comment-jumbotron h3{
     font-style: italic;
     font-size: 20px;
 }
+
+.section3{
+    background-color: black;
+    padding-top: 5rem;
+}
+.footer-jumbotron{
+    text-align: center;
+    
+}
+.footer-jumbotron h3{
+    color: white;
+    font-weight: 400;
+    font-size: 15px;
+}
+.footer-jumbotron p{
+    color: red;
+    font-weight: 400;
+    font-size: 15px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+} 
+@media only screen and (max-width: 767px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.card{
+        margin-left: 30px;
+    }
+	.navbar-collapse {
+		background: red;
+	}
+}  
