--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -5,10 +5,18 @@
     box-sizing: border-box;
     font-family: 'Poppins', serif;
 }
+body{
+    font-family: 'Poppins', serif;
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/daniel-olah-ZbEURDlbE6o-unsplash.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    color: white;
+}
 .navbar{
-    background-color: white;
-    padding: 0 15em;
-} 
+    color: white;
+    padding: 1rem 5rem 3rem 5rem; 
+}
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
     height: 3em;
@@ -18,104 +26,86 @@
     justify-content: center;
     border-radius: 50%;
 }
-
-.contact-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(58.51deg, rgba(255, 255, 255, 0.05) 1.36%, rgba(255, 255, 255, 0.122) 96.3%);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.65);
-    border-radius: 1rem;
-    width: 60%;
-    margin: 3rem auto;
-    padding: 3rem 0rem;
-}
-
-input {
-    border-radius: 1rem;
-    outline: none;
-    border: none;
-    width: 70%;
-    height: 3rem;
+.testimonial-grid{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(3, 1fr);
     padding: 1rem;
-    margin-bottom: 3rem;
-    font-size: large;
-
-}
-div.comment-jumbotron{
-    padding: 5em 0;
-}
-.btn{
-    width: 30%;
-    border-radius: 20px;
-}
-div.comment-jumbotron h3{
-    color: red;
-    font-weight: 800;
-    font-size: 2.5rem;
 }
 
+.grid-col-2{
+    grid-column: span 2;
+}
+.grid-col-3{
+    grid-column: span 3;
+}
+.grid-row-2{
+    grid-row: span 2;
+}
+.testimonial {
+    text-align: left;
+    border-radius: 1rem;
+    backdrop-filter: blur(1rem);
+    background-color: rgba(225,225,225,0.1);
+    padding: 2rem;
+}
+.testimonial h3{
+    color: wheat;
+}
+.testimonial p{
+    font-weight: 300;
+    line-height: 2rem;
+    text-align: justify;
+}
 
-/*Footer*/
-.footer-jumbotron{
+.card-number{
+    color: rgba(225,225,225,0.08);
+    font-size: 5rem;
+}
+.card-title{
+    color: orange;
+    font-weight: 500;
+    font-size: 1.2rem;
     text-align: center;
-    padding: 5em 2em;
+    padding-bottom: 2rem;
 }
-.footer-jumbotron h3{
+h6{
+    font-size: small;
+}
+.ALU-logo{
+    width: 320px;
+    height: 100px;
+}
+.Note{
     color: red;
-    font-weight: 600;
-    font-size: 30px;
-}
-.footer-jumbotron p{
-    color: white;
-    font-weight: 600;
-    font-size: 20px;
     font-style: italic;
 }
-@media screen and (max-width: 600px){
-    nav {
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        padding: 3rem 0rem;    
-    }
-    .logo {
-        height: 4rem;
-        width: 4rem;
-        display: flex;
-        margin-left: 1rem;
-    }
-    
-    h2 {
-        font-size: 1rem;
-    }
-    
-    .buttons {
-        display: flex;
-        align-items: center;
-        justify-content: end;
-        margin-right: 1rem;
-      
-    }
-    
-    button {
-        width: 3.5rem;
-        font-size: 0.8rem;
-    }
-    
-    .contact-form {
-        width: 90%;
-    }
-    
-    input {
-        border-radius: 0.5rem;
-        width: 80%;
-    }
-    .image-row{
-        margin-top: 100px;
-    }
+.Notes{
+    color: wheat;
 }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+} 
+@media only screen and (max-width: 767px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.card{
+        margin-left: 30px;
+    }
+	.navbar-collapse {
+		background: red;
+	}
+} 
