--- a/CSS/author.css
+++ b/CSS/author.css
@@ -54,13 +54,13 @@
 	background-image: url(../IMAGES/IMG-DEE.jpg);
 }
 .bg-2 {
-	background-image: url(../IMAGES/Ekhat.jpg);
+	background-image: url(../IMAGES/nation1.jpeg);
 }
 .bg-3 {
 	background-image: url(../IMAGES/Justus.jpg);
 }
 .bg-4 {
-	background-image: url(../IMAGES/Manga.jpeg);
+	background-image: url(../IMAGES/mangaliso.jpeg);
 }
 .bg-5 {
 	background-image: url(../IMAGES/Untitled\ design\ \(2\).png);
