--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,7 +31,7 @@ section {
 }
 
 .section1 {
-    height: 110vh;
+    height: 95vh;
 }
 
 .section2 {
@@ -152,7 +152,7 @@ div.journey-begin-jumbotron{
     color: white;
 }
 div.journey-begin-jumbotron div.image-row{
-    margin-top: 10em;
+    margin-top: 5em;
 }
 img.picture-ALU{
     border: 10px solid white;
@@ -353,6 +353,28 @@ img.images-ALU{
     font-size: 15px;
 }
 @media screen and (max-width: 600px){
+    .section2{
+        height: 90vh;
+    }
+    div.journey-begin-jumbotron div.image-row{
+        margin-top: -100px;
+    }
+    div.journey-begin-jumbotron div.image-row .images{
+        margin-top: 100px;
+    }
+    img.images-ALU{
+        top: -100px;
+        left: -0.2px;
+        width: 300px;
+        border-radius: 10px;
+    }
+    .notes{
+        margin-top: -20px;
+    }
+    a.stories-button{
+       margin-left: 100px;
+       margin-top: -50px;
+    }
     .section1{
         height: 150vh;
     }
@@ -430,7 +452,9 @@ img.images-ALU{
     .underline {
         width: 20%;
     }
-    
+    .polygon{
+        margin-top: -170px;
+    }
     .polygon .slide .hexagon {
         height: 15rem;
     }
