--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -6,17 +6,16 @@
     font-family: 'Poppins', serif;
 }
 body{
-    font-family: 'Poppins', serif;
-    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../IMAGES/daniel-olah-ZbEURDlbE6o-unsplash.jpg);
+    background-image: url(../IMAGES/daniel-olah-ZbEURDlbE6o-unsplash.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
     color: white;
 }
 .navbar{
-    color: white;
-    padding: 1rem 5rem 3rem 5rem; 
-}
+    padding: 0 15em;
+    background-image: linear-gradient(to right, white, black);
+} 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
     height: 3em;
@@ -25,52 +24,97 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    font-size: 20px;
 }
-.testimonial-grid{
-    display: grid;
-    gap: 1.5rem;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 1rem;
+.navbar-nav a {
+	font-size: 15px;
+	font-weight: 700;
+	text-shadow: white;
+    color: white;
+}
+.navbar-light .navbar-nav .nav-link {
+	color: #fff;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+	color: orange;
+}
+.navbar-toggler {
+	padding: 1px 5px;
+	font-size: 18px;
+	line-height: 0.3;
+    color: orange;
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+}
+.navbar .dropdown-menu .dropdown-item{
+    color: black
+}
+.navbar .dropdown-menu .dropdown-item:hover{
+    color: red;
 }
 
-.grid-col-2{
-    grid-column: span 2;
+.cards{
+    margin-top: 100px;
 }
-.grid-col-3{
-    grid-column: span 3;
-}
-.grid-row-2{
-    grid-row: span 2;
-}
-.testimonial {
-    text-align: left;
-    border-radius: 1rem;
+.card{
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+   
+    border-radius: 20px;
+    border: 1px solid transparent;
+
     backdrop-filter: blur(1rem);
-    background-color: rgba(225,225,225,0.1);
-    padding: 2rem;
+    box-shadow: 1.3rem 1.3rem 1.3rem rgba(0,0,0,0.5);
+
+    border-top-color: rgba(225, 225, 225, 0.2);
+    border-left-color: rgba(225,225,225,0.2);
+    border-bottom-color: rgba(225,225,225,0.1);
+    border-right-color: rgba(225,225,225,0.1); 
 }
-.testimonial h3{
+.card h3{
     color: wheat;
 }
-.testimonial p{
-    font-weight: 300;
-    line-height: 2rem;
-    text-align: justify;
+.card p{
+    font-weight: 500;
 }
-
+.card.no1{
+    background-color: rgba(225,225,225,0.1);
+    color: white;
+    border-radius: 20px;
+}
+.card.no2{
+    background-color: rgba(225,225,225,0.2);
+    color: white;
+    border-radius: 20px;
+}
 .card-number{
-    color: rgba(225,225,225,0.08);
+    color: rgba(225,225,225,0.05);
     font-size: 5rem;
+    z-index: -1;
+    position: relative;
+    top: -1;
+    left: 4rem;
 }
 .card-title{
     color: orange;
-    font-weight: 500;
-    font-size: 1.2rem;
-    text-align: center;
-    padding-bottom: 2rem;
+    font-weight: 800;
+    font-size: 2rem;
+    text-decoration: underline;
 }
-h6{
-    font-size: small;
+.card a{
+    text-decoration: none;
+}
+.card a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: white;
+    margin:0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: orangered;
+    transition: all 0.2s ease;
 }
 .ALU-logo{
     width: 320px;
