add new changes

--- a/CSS/story2.css
+++ b/CSS/story2.css
@@ -152,6 +152,24 @@ body{
 .Notes{
     color: wheat;
 }
+.section3 {
+    background-color: black;
+    padding-top: 5rem;
+}
+.footer-jumbotron{
+    text-align: center;
+    
+}
+.footer-jumbotron h3{
+    color: white;
+    font-weight: 400;
+    font-size: 15px;
+}
+.footer-jumbotron p{
+    color: red;
+    font-weight: 400;
+    font-size: 15px;
+}
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.navbar-nav {
