--- a/CSS/author.css
+++ b/CSS/author.css
@@ -121,6 +121,25 @@ p span{
 .slde.btn:hover{
 	opacity: 1;
 }
+.section3 {
+    background-color: black;
+    padding-top: 3rem;
+}
+.footer-jumbotron{
+    text-align: center;
+    
+}
+.footer-jumbotron h3{
+    color: white;
+    font-weight: 400;
+    font-size: 15px;
+}
+.footer-jumbotron p{
+    color: red;
+    font-weight: 400;
+    font-size: 15px;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.navbar-nav {
 		text-align: center;
