--- a/CSS/story3.css
+++ b/CSS/story3.css
@@ -13,8 +13,7 @@ body{
     color: white;
 }
 .navbar{
-    color: white;
-    padding: 1rem 5rem 3rem 5rem; 
+    padding: 0 5em; 
 } 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
@@ -24,8 +23,33 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    font-size: 20px;
 }
-
+.navbar-nav a {
+	font-size: 15px;
+	font-weight: 700;
+	text-shadow: white;
+    color: white;
+}
+.navbar-light .navbar-nav .nav-link {
+	color: #fff;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+	color: orange;
+}
+.navbar-toggler {
+	padding: 1px 5px;
+	font-size: 18px;
+	line-height: 0.3;
+    color: orange;
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+}
+.navbar .dropdown-menu .dropdown-item{
+    color: black
+}
+.navbar .dropdown-menu .dropdown-item:hover{
+    color: red;
+}
 
 
 .testimonial {
@@ -136,4 +160,22 @@ div.comment-jumbotron h3{
     height: 15rem;
     margin: 0rem 2rem 1rem 0rem;
     float: left;
+}
+.section3 {
+    background-color: black;
+    padding-top: 5rem;
+}
+.footer-jumbotron{
+    text-align: center;
+    
+}
+.footer-jumbotron h3{
+    color: white;
+    font-weight: 400;
+    font-size: 15px;
+}
+.footer-jumbotron p{
+    color: red;
+    font-weight: 400;
+    font-size: 15px;
 }
