add new changes

--- a/CSS/story6.css
+++ b/CSS/story6.css
@@ -72,7 +72,7 @@ body{
 }
 
 .pictures{
-    background-color: rgba(225,225,225,0.2);
+    /* background-color: rgba(225,225,225,0.2); */
     border-radius: 50px;
 }
 .pic{
@@ -150,3 +150,32 @@ body{
     color: red;
     font-style: italic;
 }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+    .pictures{
+        text-align: center;
+    }
+} 
+@media only screen and (max-width: 767px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+    .pictures{
+        text-align: center;
+    }
+} 
