--- a/CSS/authors.css
+++ b/CSS/authors.css
@@ -1,13 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500&display=swap");
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', serif;
 }
+header{
+    font-family: 'Poppins', serif;
+    background-image: url(../IMAGES/john-towner-JgOeRuGD_Y4-unsplash.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}  
 .navbar{
-    padding: 0 5em; 
-} 
+    color: white;
+    padding: 1rem 5rem 1rem 5rem; 
+}
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
     height: 3em;
@@ -42,35 +50,34 @@
 }
 .navbar .dropdown-menu .dropdown-item:hover{
     color: red;
-}  
-/*  carousel      */
+}
+.navbar-light .navbar-nav .nav-link {
+	color: #fff;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+	color: orange;
+}
+.navbar-toggler {
+	padding: 1px 5px;
+	font-size: 18px;
+	line-height: 0.3;
+    color: orange;
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+}
+.navbar .dropdown-menu .dropdown-item{
+    color: black
+}
+.navbar .dropdown-menu .dropdown-item:hover{
+    color: red;
+}
 
-
-.carousel-item {
-	height: 100vh;
-	min-height: 400px;
+.carousel-item{
+    height: 100vh;
+    min-height: 400px;
 }
- .bg-1 {
-	background-image: url(../IMAGES/IMG-DEE.jpg);
+.bg1{
+    background-image: url(../IMAGES/IMG-DEE.jpg);
 }
-.bg-2 {
-	background-image: url(../IMAGES/nation1.jpeg);
-}
-.bg-3 {
-	background-image: url(../IMAGES/Justus.jpg);
-}
-.bg-4 {
-	background-image: url(../IMAGES/mangaliso.jpeg);
-}
-.bg-5 {
-	background-image: url(../IMAGES/Untitled\ design\ \(2\).png);
-}
-.bg-1, .bg-2, .bg-3, .bg-4, .bg-5{
-	-webkit-background-size: cover;
-	background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}  */
 .carousel-caption {
 	bottom: 180px;
 	z-index: 2;
@@ -121,13 +128,12 @@ p span{
 .slde.btn:hover{
 	opacity: 1;
 }
-.section3 {
-    background-color: black;
-    padding-top: 3rem;
-}
 .footer-jumbotron{
     text-align: center;
     
+}
+.section3{
+    background-color: black;
 }
 .footer-jumbotron h3{
     color: white;
@@ -138,51 +144,4 @@ p span{
     color: red;
     font-weight: 400;
     font-size: 15px;
-}  
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-	.navbar-nav {
-		text-align: center;
-	}
-	.navbar-collapse {
-		background: red;
-	}
-	.navbar-collapse .nav-item .nav-link {
-		color: #000;
-	}
-	.carousel-caption {
-		bottom: 350px;
-	}
-	.carousel-caption h5 {
-		font-size: 65px;
-	}
-	.carousel-caption p {
-		font-size: 18px;
-		width: 100%;
-	}
-} 
-@media only screen and (max-width: 767px) {
-	.navbar-nav {
-		text-align: center;
-	}
-	.navbar-collapse .nav-item .nav-link {
-		color: #000;
-	}
-	.carousel-caption {
-		bottom: 165px;
-	}
-	.carousel-caption h5 {
-		font-size: 25px;
-	}
-	.carousel-caption p {
-		font-size: 12px;
-		width: 100%;
-	}
-	.carousel-caption a {
-		padding: 10px 15px;
-		font-size: 15px;
-	}
-	.navbar-collapse {
-		background: red;
-	}
 } 
