add new changes

--- a/CSS/author.css
+++ b/CSS/author.css
@@ -70,7 +70,7 @@
 	background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-}  */
+}  *
 .carousel-caption {
 	bottom: 180px;
 	z-index: 2;
