--- a/CSS/authors.css
+++ b/CSS/authors.css
@@ -4,18 +4,17 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', serif;
-}
-header{
+}   
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Poppins', serif;
-    background-image: url(../IMAGES/john-towner-JgOeRuGD_Y4-unsplash.jpg);
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-}  
-.navbar{
-    color: white;
-    padding: 1rem 5rem 1rem 5rem; 
 }
+.navbar{
+    padding: 0 5em;
+} 
 .logo {
     background-image: linear-gradient(to right, #E23219, #FFB800);
     height: 3em;
@@ -25,6 +24,32 @@ header{
     justify-content: center;
     border-radius: 50%;
     font-size: 20px;
+    color: black;
+}
+.navbar-nav a {
+	font-size: 15px;
+	font-weight: 700;
+	text-shadow: white;
+    color: white;
+}
+.light .navbar-nav .nav-link {
+	color: #fff;
+}
+.light .navbar-nav .nav-link:focus, .light .navbar-nav .nav-link:hover {
+	color: orange;
+}
+.navbar-toggler {
+	padding: 1px 5px;
+	font-size: 18px;
+	line-height: 0.3;
+    color: orange;
+    background-image: linear-gradient(to right, #E23219, #FFB800);
+}
+.navbar .dropdown-menu .dropdown-item{
+    color: black
+}
+.navbar .dropdown-menu .dropdown-item:hover{
+    color: red;
 }
 .navbar-nav a {
 	font-size: 15px;
@@ -51,56 +76,37 @@ header{
 .navbar .dropdown-menu .dropdown-item:hover{
     color: red;
 }
-.navbar-light .navbar-nav .nav-link {
-	color: #fff;
-}
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: orange;
-}
-.navbar-toggler {
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-    color: orange;
-    background-image: linear-gradient(to right, #E23219, #FFB800);
-}
-.navbar .dropdown-menu .dropdown-item{
-    color: black
-}
-.navbar .dropdown-menu .dropdown-item:hover{
-    color: red;
-}
 
 .carousel-item{
     height: 100vh;
-    min-height: 400px;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    /* -webkit-background-size: cover;
+    background-size: cover; */
 }
-.bg1{
-    background-image: url(../IMAGES/IMG-DEE.jpg);
+.carousel-caption{
+    bottom: 170px;
 }
-.carousel-caption {
-	bottom: 180px;
-	z-index: 2;
-}
-p span{
+.carousel-caption h5{
+    font-size: 30px;
+    letter-spacing: 15px;
     color: orange;
-	font-size: 30px;
-	text-transform: capitalize;
-	letter-spacing: 2px;
-	margin-top: 25px;
-	font-family: 'Moon Dance', cursive;
+    margin-bottom: 20px;
+    font-family: 'Moon Dance', cursive;
 }
-.carousel-caption p {
-	width: 100%;
-	margin: auto;
-	font-size: 18px;
-	line-height: 1.9;
-	font-family: 'Moon Dance', cursive;
-	color: wheat;
-	font-style: italic
+.carousel-caption p{
+    width: 100%;
+    margin: auto;
+    color: wheat;
+    font-family: 'Moon Dance', cursive;
+    font-style: italic;
+    line-height: 1.9;
+    font-size: 20px;
+    font-weight: 500;
+
 }
-.carousel-caption a {
-	text-transform: uppercase;
+.carousel-caption a{
+    text-transform: uppercase;
 	text-decoration: none;
 	padding: 5px 20px;
 	display: inline-block;
@@ -109,39 +115,82 @@ p span{
 	border-radius: 5px;
     font-weight: bolder;
 }
-.carousel-inner:before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.5);
-	z-index: 1;
+.author{
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: unset;
 }
-.carousel-indicators {
-	bottom: 65px;
+.w-100 {
+	height: 100vh;
 }
-.carousel-indicators button {
-	width: 100px !important;
+.section3 {
+    background-color: black;
+    padding-top: 5rem;
 }
-.slde.btn:hover{
-	opacity: 1;
-}
-.footer-jumbotron{
+.footer{
     text-align: center;
     
 }
-.section3{
-    background-color: black;
-}
-.footer-jumbotron h3{
+.footer h3{
     color: white;
     font-weight: 400;
     font-size: 15px;
 }
-.footer-jumbotron p{
+.footer p{
     color: red;
     font-weight: 400;
     font-size: 15px;
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 991px)
+ {
+	.carousel-item{
+        height: 100vh;
+    }
+    .navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse {
+		background: red;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.carousel-caption {
+		bottom: 200px;
+	}
+	.carousel-caption h5 {
+		font-size: 65px;
+	}
+	.carousel-caption p {
+		font-size: 18px;
+		width: 100%;
+	}
+} 
+@media only screen and (max-width: 767px) {
+	.navbar-nav {
+		text-align: center;
+	}
+	.navbar-collapse .nav-item .nav-link {
+		color: #000;
+	}
+	.carousel-caption {
+		bottom: 165px;
+	}
+	.carousel-caption h5 {
+		font-size: 25px;
+	}
+	.carousel-caption p {
+		font-size: 12px;
+		width: 100%;
+	}
+	.carousel-caption a {
+		padding: 10px 15px;
+		font-size: 15px;
+	}
+	.navbar-collapse {
+		background: red;
+	}
 } 
