--- a/CSS/story1.css
+++ b/CSS/story1.css
@@ -28,7 +28,7 @@ body{
 }
 .navbar-nav a {
 	font-size: 15px;
-	font-weight: 700;
+	font-weight: 400;
 	text-shadow: white;
     color: white;
 }
@@ -49,7 +49,7 @@ body{
     color: black
 }
 .navbar .dropdown-menu .dropdown-item:hover{
-    color: red;
+    color: black;
 }
 .navbar-light .navbar-nav .nav-link {
 	color: #fff;
@@ -68,7 +68,7 @@ body{
     color: black
 }
 .navbar .dropdown-menu .dropdown-item:hover{
-    color: red;
+    color: black;
 }
 
 
@@ -138,7 +138,7 @@ body{
     height: 100px;
 }
 .notes{
-    color: wheat;
+    color: white;
     text-align: center;
 }
 .Note{
@@ -146,34 +146,6 @@ body{
     font-style: italic;
 }
 
-
-.contact-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(58.51deg, rgba(255, 255, 255, 0.05) 1.36%, rgba(255, 255, 255, 0.122) 96.3%);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.65);
-    border-radius: 1rem;
-    width: 60%;
-    margin: 3rem auto;
-    padding: 3rem 0rem;
-}
-
-input {
-    border-radius: 1rem;
-    outline: none;
-    border: none;
-    width: 70%;
-    height: 3rem;
-    padding: 1rem;
-    margin-bottom: 3rem;
-    font-size: large;
-
-}
 div.comment-jumbotron{
     padding: 5em 0;
 }
